--- a/resenhas/livrosIndividuais.css
+++ b/resenhas/livrosIndividuais.css
@@ -22,6 +22,11 @@ main {
     margin-bottom: 40px;
     border-radius: 5px;
 }
+#H1simboloPerdido {
+    text-align: center;
+    color: rgb(255, 255, 255);
+    background-image: linear-gradient(rgb(2, 134, 2), rgb(5, 5, 5), white);
+}
 
 h2 {
     padding-top: 10px;
